--- a/app/src/main/res/layout/activity_user_rides.xml
+++ b/app/src/main/res/layout/activity_user_rides.xml
@@ -28,7 +28,5 @@
         android:text="Add Ride"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/list_rides"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"/>
+        android:layout_below="@+id/list_rides"/>
 </RelativeLayout>
