--- a/app/src/main/res/layout/activity_ride_view.xml
+++ b/app/src/main/res/layout/activity_ride_view.xml
@@ -8,5 +8,18 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin">
 
+    <TextView
+        android:id="@+id/text_label_ride_name"
+        android:text="Ride Name: "
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/text_ride_name"
+        android:text="test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@+id/text_label_ride_name"/>
+
 
 </RelativeLayout>
