--- a/app/src/main/res/layout/activity_user_bikes.xml
+++ b/app/src/main/res/layout/activity_user_bikes.xml
@@ -1,32 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" >
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/text_rides_title"
-        android:text="Rides"
+        android:id="@+id/text_bike_name"
+        android:text="Bikes"
         android:textSize="32sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"/>
 
     <ListView
-        android:id="@+id/list_rides"
+        android:id="@+id/list_bikes"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="1">
     </ListView>
 
     <Button
-        android:id="@+id/button_rides_add"
-        android:text="Add Ride"
+        android:id="@+id/button_bikes_add"
+        android:text="Add Bike"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"/>
+
 </LinearLayout>
