--- a/app/src/main/res/layout/adapter_user_bikes.xml
+++ b/app/src/main/res/layout/adapter_user_bikes.xml
@@ -10,25 +10,25 @@
     android:paddingBottom="@dimen/activity_vertical_margin">
 
     <ImageView
-        android:id="@+id/img_ride_pic"
+        android:id="@+id/img_bike_pic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@mipmap/ic_launcher"
         android:paddingRight="30dp"/>
 
     <TextView
-        android:id="@+id/text_ride_name"
+        android:id="@+id/text_bike_name"
         android:text="Loading..."
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/img_ride_pic"/>
+        android:layout_toRightOf="@+id/img_bike_pic"/>
 
     <TextView
         android:id="@+id/text_ride_date"
         android:text="Loading..."
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/img_ride_pic"
-        android:layout_below="@+id/text_ride_name"/>
+        android:layout_toRightOf="@+id/img_bike_pic"
+        android:layout_below="@+id/text_bike_name"/>
 
 </RelativeLayout>
