--- a/app/src/main/res/layout/activity_goal_update.xml
+++ b/app/src/main/res/layout/activity_goal_update.xml
@@ -3,7 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin">
 
     <TextView
         android:text="Update Goal"
@@ -21,10 +25,12 @@
         android:id="@+id/edittext_goal_update"
         android:hint="New Goal"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:inputType="number"/>
 
     <Button
         android:id="@+id/btn_goal_update"
+        android:text="Update goal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </LinearLayout>
