Updated database + goals

--- a/app/src/main/res/layout/activity_ride_add.xml
+++ b/app/src/main/res/layout/activity_ride_add.xml
@@ -53,18 +53,18 @@
         android:inputType="number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+    <!--
+        <TextView
+            android:id="@+id/text__user_bike"
+            android:text="Bicycle"
+            android:layout_width="wrap_content"
+            android:layout_height="wcontent"/>
 
-    <TextView
-        android:id="@+id/text__user_bike"
-        android:text="Bicycle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <Spinner
-        android:id="@+id/spinner_user_bike"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-    </Spinner>
+        <Spinner
+            android:id="@+id/spinner_user_bike"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        </Spinner>-->
 
     <Button
         android:id="@+id/button_add_ride"
