--- a/app/src/main/res/layout/activity_user_rides.xml
+++ b/app/src/main/res/layout/activity_user_rides.xml
@@ -16,6 +16,11 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"/>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"/>
+
     <ListView
         android:id="@+id/list_rides"
         android:layout_width="wrap_content"
