--- a/app/src/main/res/layout/activity_bike_add.xml
+++ b/app/src/main/res/layout/activity_bike_add.xml
@@ -16,11 +16,17 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"/>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"/>
+
     <TextView
         android:id="@+id/text_bike_name"
         android:text="Bicycle Name"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:paddingTop="@dimen/activity_vertical_margin"/>
 
     <EditText
         android:id="@+id/editText_bike_name"
@@ -33,7 +39,8 @@
         android:id="@+id/text_bike_type"
         android:text="Bicycle Type"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:paddingTop="@dimen/activity_vertical_margin"/>
 
     <Spinner
         android:id="@+id/spinner_bike_type"
@@ -45,7 +52,8 @@
         android:id="@+id/text_bike_brand"
         android:text="Bicycle Brand"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:paddingTop="@dimen/activity_vertical_margin"/>
 
     <EditText
         android:id="@+id/editText_bike_brand"
