--- a/app/src/main/res/layout/activity_user_goals.xml
+++ b/app/src/main/res/layout/activity_user_goals.xml
@@ -12,10 +12,15 @@
     <TextView
         android:id="@+id/text_goals_label"
         android:text="Goals"
-        android:textSize="24sp"
+        android:textSize="32sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"/>
 
     <RelativeLayout
         android:layout_width="wrap_content"
