--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -11,6 +11,7 @@
     <ImageView
         android:id="@+id/img_profile"
         android:src="@mipmap/ic_user_profile_test"
+        android:contentDescription="@string/user_profile_picture"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_gravity="center"/>
@@ -45,9 +46,9 @@
             android:id="@+id/text_profile_rides"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Loading"
-            android:paddingLeft="48sp"
-            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:text="@string/loading"
+            android:paddingStart="48sp"
+            android:paddingEnd="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:layout_toEndOf="@+id/text_profile_label_rides"/>
@@ -72,7 +73,7 @@
             android:id="@+id/text_profile_bikes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Loading"
+            android:text="@string/loading"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
@@ -99,9 +100,9 @@
             android:id="@+id/text_profile_goals"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Loading"
-            android:paddingLeft="85sp"
-            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:text="@string/loading"
+            android:paddingStart="85sp"
+            android:paddingEnd="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:layout_toEndOf="@+id/text_profile_label_goals"/>
