--- a/app/src/main/res/layout/adapter_user_rides.xml
+++ b/app/src/main/res/layout/adapter_user_rides.xml
@@ -14,21 +14,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@mipmap/ic_launcher"
-        android:paddingRight="30dp"/>
+        android:paddingStart="30dp"
+        android:paddingEnd="30dp"/>
 
     <TextView
         android:id="@+id/text_ride_name"
         android:text="Loading..."
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/img_ride_pic"/>
+        android:layout_toEndOf="@+id/img_ride_pic"/>
 
     <TextView
         android:id="@+id/text_ride_date"
         android:text="Loading..."
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/img_ride_pic"
+        android:layout_toEndOf="@+id/img_ride_pic"
         android:layout_below="@+id/text_ride_name"/>
 
 </RelativeLayout>
