--- a/app/src/main/res/layout/activity_user_goals.xml
+++ b/app/src/main/res/layout/activity_user_goals.xml
@@ -27,11 +27,11 @@
         android:layout_height="wrap_content">
         <TextView
             android:id="@+id/text_goal_label"
-            android:text="Goal for the week is:"
+            android:text="Goal:"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingRight="60dp"
             android:paddingTop="@dimen/activity_vertical_margin"
             android:paddingBottom="@dimen/activity_vertical_margin"/>
         <TextView
@@ -51,7 +51,7 @@
         android:layout_height="wrap_content">
         <TextView
             android:id="@+id/text_kmweek_label"
-            android:text="Total so far this week:"
+            android:text="Total so far:"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="@dimen/activity_horizontal_margin"
