--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -17,6 +17,13 @@
         android:layout_gravity="center"/>
 
     <TextView
+        android:text="Tap picture to add a profile pic"
+        android:textSize="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"/>
+
+    <TextView
         android:id="@+id/text_profile_name"
         android:text="Welcome "
         android:textSize="24sp"
